--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "mqtt": "2.18.0",
     "multer": "1.3.0",
     "mustache": "2.3.0",
+    "node-red-contrib-mongodb2": "^0.5.6",
+    "node-red-dashboard": "^2.9.4",
     "node-red-node-email": "0.1.*",
     "node-red-node-feedparser": "0.1.*",
     "node-red-node-rbe": "0.2.*",
